--- a/ar/index.html
+++ b/ar/index.html
@@ -344,7 +344,7 @@
                     </div>
                     <div style="display: flex; align-items: flex-start; margin-bottom: 8px;">
                         <i class="fas fa-phone" style="margin-right: 20px; color: #4986e4; margin-top: 5px;"></i>
-                        <a href="tel:+9647739999464">+964-773-9999-464</a>
+                        <a href="tel:+9647739999464">00964-773-9999-464</a>
                     </div>
                     <div style="display: flex; align-items: flex-start; margin-bottom: 8px;">
                         <i class="fas fa-envelope" style="margin-right: 20px; color: #4986e4; margin-top: 5px;"></i>
