--- a/ar/index.html
+++ b/ar/index.html
@@ -378,7 +378,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>حقوق النشر © 2025 سكاي سوگ - جميع الحقوق محفوظة.</p>
+                <p>حقوق النشر © 2025 ﺷﺮﻛﺔ ﻣﻴﺪﺍﻥ ﺍﻟﺴﻤﺎﺀ ﻟﻠﺴﻔﺮ ﻭﺍﻟﺴﻴﺎﺣﺔ ﻣﺤﺪﻭﺩﺓ ﺍﻟﻤﺴؤﻭﻟﻴﺔ (سكاي سوگ) - جميع الحقوق محفوظة.</p>
             </div>
         </div>
     </footer>
