--- a/ar/terms.html
+++ b/ar/terms.html
@@ -164,7 +164,7 @@
                     <div class="footer-logo">
                         <img src="../../images/logo.png" alt="شعار ﺷﺮﻛﺔ ﻣﻴﺪﺍﻥ ﺍﻟﺴﻤﺎﺀ ﻟﻠﺴﻔﺮ ﻭﺍﻟﺴﻴﺎﺣﺔ ﻣﺤﺪﻭﺩﺓ ﺍﻟﻤﺴؤﻭﻟﻴﺔ (سكاي سوگ)">
                     </div>
-                    <p>ﺷﺮﻛﺔ ﻣﻴﺪﺍﻥ ﺍﻟﺴﻤﺎﺀ ﻟﻠﺴﻔﺮ ﻭﺍﻟﺴﻴﺎﺣﺔ ﻣﺤﺪﻭﺩﺓ ﺍﻟﻤﺴؤﻭﻟﻴﺔ (ﺷﺮﻛﺔ ﻣﻴﺪﺍﻥ ﺍﻟﺴﻤﺎﺀ ﻟﻠﺴﻔﺮ ﻭﺍﻟﺴﻴﺎﺣﺔ ﻣﺤﺪﻭﺩﺓ ﺍﻟﻤﺴؤﻭﻟﻴﺔ (سكاي سوگ)) هي شركة رائدة في إدارة سفر الشركات، توفر حلولاً مخصصة لتلبية احتياجات سفر أعمالك.</p>
+                    <p>ﺷﺮﻛﺔ ﻣﻴﺪﺍﻥ ﺍﻟﺴﻤﺎﺀ ﻟﻠﺴﻔﺮ ﻭﺍﻟﺴﻴﺎﺣﺔ ﻣﺤﺪﻭﺩﺓ ﺍﻟﻤﺴؤﻭﻟﻴﺔ (سكاي سوگ) هي شركة رائدة في إدارة سفر الشركات، توفر حلولاً مخصصة لتلبية احتياجات سفر أعمالك.</p>
                     <div class="social-links" style="display: flex; justify-content: flex-end;">
                         <a href="https://www.facebook.com/SkySoog" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://www.instagram.com/skysoog/" target="_blank"><i class="fab fa-instagram"></i></a>
