--- a/ar/terms.html
+++ b/ar/terms.html
@@ -149,7 +149,7 @@
             <h2>11. معلومات الاتصال</h2>
             <p>إذا كانت لديك أي أسئلة حول هذه الشروط والأحكام، فيرجى الاتصال بنا على:</p>
             <p>البريد الإلكتروني: <a href="mailto:booking@skysoog.com">booking@skysoog.com</a><br>
-            الهاتف: <a href="tel:+9647739999464">00964-773-9999-464</a><br>
+            الهاتف: <a href="tel:+9647739999464">07739999464</a><br>
             العنوان: بغداد، المنصور، مجمع رويال منصور، مبنى 27، مكتب 603</p>
             
             <a href="index.html" class="back-to-home"><i class="fas fa-arrow-left"></i> العودة إلى الصفحة الرئيسية</a>
