--- a/ar/privacy-policy.html
+++ b/ar/privacy-policy.html
@@ -171,7 +171,7 @@
                 <div class="footer-links">
                     <h3 class="footer-title">روابط سريعة</h3>
                     <ul>
-                        <li><a href="ar/index.html#hero">الرئيسية</a></li>
+                        <li><a href="index.html#hero">الرئيسية</a></li>
                         <li><a href="#services">خدماتنا</a></li>
                         <li><a href="#benefits">مميزاتنا</a></li>
                         <li><a href="#testimonials">آراء العملاء</a></li>
