--- a/ar/terms.html
+++ b/ar/terms.html
@@ -175,12 +175,12 @@
                 <div class="footer-links">
                     <h3 class="footer-title">روابط سريعة</h3>
                     <ul>
-                        <li><a href="#hero">الرئيسية</a></li>
-                        <li><a href="#services">خدماتنا</a></li>
-                        <li><a href="#benefits">مميزاتنا</a></li>
-                        <li><a href="#testimonials">آراء العملاء</a></li>
-                        <li><a href="#about">من نحن</a></li>
-                        <li><a href="#contact">اتصل بنا</a></li>
+                        <li><a href="index.html#hero">الرئيسية</a></li>
+                        <li><a href="index.html#services">خدماتنا</a></li>
+                        <li><a href="index.html#benefits">مميزاتنا</a></li>
+                        <li><a href="index.html#testimonials">آراء العملاء</a></li>
+                        <li><a href="index.html#about">من نحن</a></li>
+                        <li><a href="index.html#contact">اتصل بنا</a></li>
                         <li><a href="privacy-policy.html">سياسة الخصوصية</a></li>
                         <li><a href="terms.html">الشروط والأحكام</a></li>
                     </ul>
