--- a/ar/index.html
+++ b/ar/index.html
@@ -265,7 +265,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">ماذا يقول عملاؤنا</h2>
-                <p>اسمع من الشركات التي تثق في سكاي سوگ لاحتياجات سفر شركاتها</p>
+                <p>اسمع من عملائنا الذين يثقون في سكاي سوگ لاحتياجات سفر شركاتهم</p>
             </div>
             <div class="testimonials-container">
                 <div class="testimonial-card">
