--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -234,7 +234,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>Copyright © 2025 SkySoog.com - All Rights Reserved.</p>
+                <p>Copyright © 2025 Maidan Al-Sama Travel & Tourism Company , W.L.L (SkySoog.com) - All Rights Reserved.</p>
             </div>
         </div>
     </footer>
