--- a/about-us.html
+++ b/about-us.html
@@ -175,7 +175,7 @@
                 <div class="about-container">
                     <div class="about-content">
                         <!-- New content will be placed here -->
-                        <p>SkySoog is a premier corporate travel management company committed to delivering exceptional travel solutions tailored to the needs of modern businesses. With extensive industry experience, we understand the complexities and demands of corporate travel.</p>
+                        <p>Maidan Al-Sama Travel & Tourism Company , W.L.L (SkySoog.com) is a premier corporate travel management company committed to delivering exceptional travel solutions tailored to the needs of modern businesses. With extensive industry experience, we understand the complexities and demands of corporate travel.</p>
                         <p>Our dedicated team of travel experts provides personalized, reliable service designed to meet your organization’s unique requirements. We focus on building lasting partnerships with our clients by offering competitive pricing, proactive support, and seamless travel management.</p>
                         <p>Leveraging advanced technology and strong industry alliances, SkySoog empowers your business to streamline travel planning, enhance traveler experiences, and control costs—ensuring every trip adds value to your bottom line.</p> 
                     </div>
