--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       "email": "booking@skysoog.com",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Royal Mansour Complex, Building 27, Office 603",
+        "streetAddress": "Royal Mansour Complex, Building 27",
         "addressLocality": "Al-Mansour",
         "addressRegion": "Baghdad",
         "addressCountry": "IQ"
@@ -324,7 +324,7 @@
                         </div>
                         <div class="contact-text">
                             <h3>Our Location</h3>
-                            <p>Baghdad, Al-Mansour, Royal Mansour Complex, Building 27, Office 603</p>
+                            <p>Baghdad, Al-Mansour, Royal Mansour Complex, Building 27</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -418,7 +418,7 @@
                 
                 <div class="footer-contact">
                     <h3 class="footer-title">Contact Us</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Baghdad, Al-Mansour, Royal Mansour Complex, Building 27, Office 603</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Baghdad, Al-Mansour, Royal Mansour Complex, Building 27</p>
                     <p><i class="fas fa-phone"></i> <a href="tel:+9647739999464">+964-773-9999-464</a></p>
                     <p><i class="fas fa-envelope"></i> <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#98;&#111;&#111;&#107;&#105;&#110;&#103;&#64;&#115;&#107;&#121;&#115;&#111;&#111;&#103;&#46;&#99;&#111;&#109;">&#98;&#111;&#111;&#107;&#105;&#110;&#103;&#64;&#115;&#107;&#121;&#115;&#111;&#111;&#103;&#46;&#99;&#111;&#109;</a></p>
                     <p><i class="fas fa-clock"></i> Business Hours: 24/7</p>
@@ -450,7 +450,7 @@
       "email": "booking@skysoog.com",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Royal Mansour Complex, Building 27, Office 603",
+        "streetAddress": "Royal Mansour Complex, Building 27",
         "addressLocality": "Al-Mansour",
         "addressRegion": "Baghdad",
         "addressCountry": "IQ"
