--- a/ar/index.html
+++ b/ar/index.html
@@ -327,7 +327,7 @@
                             </div>
                             <div class="contact-text">
                                 <h3 style="margin-bottom: 5px;">موقعنا</h3>
-                                <p style="margin: 0;">بغداد، المنصور، مجمع رويال منصور، مبنى 27، مكتب 603</p>
+                                <p style="margin: 0;">بغداد، المنصور، مجمع رويال منصور، مبنى 27</p>
                             </div>
                         </div>
                     </div>
@@ -430,7 +430,7 @@
                     <h3 class="footer-title">اتصل بنا</h3>
                     <div style="display: flex; align-items: flex-start; margin-bottom: 8px;">
                         <i class="fas fa-map-marker-alt" style="margin-right: 20px; color: #4986e4; margin-top: 5px;"></i>
-                        <span>بغداد، المنصور، مجمع رويال منصور، مبنى 27، مكتب 603</span>
+                        <span>بغداد، المنصور، مجمع رويال منصور، مبنى 27</span>
                     </div>
                     <div style="display: flex; align-items: flex-start; margin-bottom: 8px;">
                         <i class="fas fa-phone" style="margin-right: 20px; color: #4986e4; margin-top: 5px;"></i>
